# juce-tremolo

./: .gitignore  CMakeLists.txt  README.md
config/: build.config.json
include/: ComboBoxItemList.h  LFOWaveform.h  PluginEditor.h  PluginProcessor.h
src/: PluginEditor.cpp  PluginProcessor.cpp
